--- a/style.css
+++ b/style.css
@@ -2,6 +2,13 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+	text-decoration: none;
+}
+a:visited {
+	color: #fff;
+}
+a {
+	cursor: pointer;
 }
 header {
 	background-color: rgb(80,80,80);
@@ -47,6 +54,7 @@ footer {
 }
 .mainList ul {
 	background-color: rgb(230,230,230);
+	padding-bottom: 0.1px;
 }
 .mainList li {
 	height: 50px;
@@ -56,8 +64,32 @@ footer {
 	text-align: center;
 	margin-bottom: 2px;
 	line-height: 50px;
+	cursor: pointer;
 }
 .mainContent {
 	text-align: center;
 	font-size: 25px;
+}
+table {
+	width: 100%;
+	border-collapse: collapse;
+}
+th {
+	background-color: rgb(200,200,200);
+}
+th, td {
+	border: 2px solid #fff;
+}
+tr:nth-of-type(even) {
+	background-color: rgb(230,230,230);
+}
+td {
+		font-size: 20px;
+}
+.btn {
+	padding: 3px 5px;
+	border-radius: 5px;
+	background-color: rgb(90, 90, 90);
+	color: #FFFFFF;
+	font-size: 20px;
 }
